# orbiter

./: .gitmodules  CMakeLists.txt  build_cmake.sh  clang-toolchain.cmake
OVP/: CMakeLists.txt
OVP/D3D9Client/: AABBUtil.cpp  AABBUtil.h  AtmoControls.cpp  AtmoControls.h  BeaconArray.cpp  CMakeLists.txt  CSphereMgr.cpp  CelSphere.cpp  CloudMgr.cpp  Cloudmgr2.cpp  D3D9Client.cpp  D3D9Client.h  D3D9Config.cpp  D3D9Config.h  D3D9ControlPanel.cpp  D3D9Effect.cpp  D3D9Frame.cpp  D3D9Pad.cpp  D3D9Pad.h  D3D9Pad2.cpp  D3D9Pad3.cpp  D3D9Surface.cpp  D3D9Surface.h  D3D9TextMgr.cpp  D3D9TextMgr.h  D3D9Util.cpp  D3D9Util.h  D3DXCompat.cpp  DDSTextureImage.cpp  DDSTextureImage.h  DXVKExtensions.cpp  DXVKExtensions.h  DebugControls.cpp  DebugControls.h  DxcCompat.cpp  DxcCompat.h  EmulateUUID.h  GDIPad.cpp  HazeMgr.cpp  IProcess.cpp  (+48 more)
OVP/D3D9Client/samples/DX9ExtMFD/: ExtMFD.cpp  MFDWindow.cpp  MFDWindow.h
OVP/D3D9Client/samples/DrawOrbits/: Draw.cpp
OVP/D3D9Client/samples/InterfaceBuilder/: InterfaceBuilder  InterfaceBuilder.csproj  InterfaceBuilder.runtimeconfig.json  Program.cs
Orbitersdk/include/: CelBodyAPI.h  DlgCtrl.h  DllCompat.h  DrawAPI.h  GraphicsAPI.h  MFDAPI.h  OrbiterAPI.h
Sound/XRSound/src/: CMakeLists.txt  CStringHasher.h  DefaultSoundGroupPreSteps.cpp  DefaultSoundGroupPreSteps.h  ModuleXRSoundEngine.cpp  ModuleXRSoundEngine.h  SoundPreSteps.cpp  SoundPreSteps.h  VesselXRSoundEngine.cpp  VesselXRSoundEngine.h  XRSoundConfigFileParser.cpp  XRSoundConfigFileParser.h  XRSoundDLL.cpp  XRSoundDLL.h  XRSoundEngine.cpp  XRSoundEngine.h  XRSoundEngine10.h  XRSoundImpl.cpp
Sound/XRSound/src/Utils/: ConfigFileParser.cpp  ConfigFileParser.h  ConfigFileParserMacros.h  FileList.cpp  FileList.h
Src/Celbody/Ariel/: TODO
Src/Celbody/Deimos/: TODO
Src/Celbody/Galsat/: CMakeLists.txt  Galsat.cpp  Galsat.h  Lieske.cpp
Src/Celbody/Galsat/Callisto/: CMakeLists.txt
Src/Celbody/Galsat/Europa/: CMakeLists.txt
Src/Celbody/Galsat/Ganymede/: CMakeLists.txt
Src/Celbody/Galsat/Io/: CMakeLists.txt
Src/Celbody/Miranda/: TODO
Src/Celbody/Moon/: CMakeLists.txt  ELP82.cpp  Moon.cpp
Src/Celbody/Satsat/: CMakeLists.txt  Satsat.cpp  Satsat.h
Src/Celbody/Satsat/Dione/: CMakeLists.txt
Src/Celbody/Satsat/Enceladus/: CMakeLists.txt
Src/Celbody/Satsat/Hyperion/: CMakeLists.txt
Src/Celbody/Vsop87/: CMakeLists.txt  Vsop87.cpp  Vsop87.h
Src/DlgCtrl/: CMakeLists.txt  DlgCtrl.cpp  DlgCtrlLocal.h  DlgCtrlPropertyList.cpp  DlgCtrlSwitch.cpp
Src/Orbiter/: Base.cpp  Base.h  Baseobj.cpp  Baseobj.h  Body.cpp  Body.h  CMakeLists.txt  Camera.cpp  Camera.h  Celbody.cpp  Config.cpp  Config.h  ConsoleManager.cpp  CustomControls.cpp  CustomControls.h  D3d7util.h  D3dmath.h  DInput.cpp  DInput.h  Defpanel.cpp  Di7frame.cpp  Di7frame.h  DialogWin.cpp  DialogWin.h  Dialogs.cpp  DlgCamera.cpp  DlgCamera.h  DlgCapture.cpp  DlgFocus.cpp  DlgFocus.h  DlgFunction.cpp  DlgHelp.cpp  DlgHelp.h  DlgInfo.cpp  DlgInfo.h  DlgMap.cpp  DlgMap.h  DlgMenuCfg.cpp  DlgMgr.cpp  DlgMgr.h  (+105 more)
Src/Orbiter_ng/: CMakeLists.txt  Orbiter_ng.cpp
Src/Orbitersdk/: CMakeLists.txt  Orbitersdk.cpp
Src/Plugin/: CMakeLists.txt
Src/Plugin/ExtMFD/: CMakeLists.txt  ExtMFD.cpp  MFDWindow.cpp  MFDWindow.h
Src/Plugin/FlightData/: CMakeLists.txt  FDGraph.cpp  FDGraph.h  FlightData.cpp
Src/Plugin/Framerate/: CMakeLists.txt  Framerate.cpp
Src/Plugin/LuaConsole/: CMakeLists.txt  ConsoleCfg.cpp  ConsoleCfg.h  ConsoleInterpreter.h  LuaConsole.cpp  LuaConsole.h
Src/Plugin/LuaMFD/: CMakeLists.txt  LuaMFD.cpp  MfdInterpreter.cpp
Src/Plugin/Meshdebug/: CMakeLists.txt  Meshdebug.cpp
Src/Plugin/Rcontrol/: CMakeLists.txt  Rcontrol.cpp
Src/Plugin/ScnEditor/: CMakeLists.txt  Editor.cpp  Editor.h  ScnEditor.cpp
Src/Plugin/ScriptMFD/: CMakeLists.txt  ScriptMFD.cpp
Src/Plugin/TrackIR/: CMakeLists.txt  NPClientWraps.cpp  NPClientWraps.h  TrackIR.cpp  TrackIR.h  TrackIRconfig.cpp  TrackIRconfig.h
Src/Plugin/TrackIR/Game Client Sample/: NPClientWraps.cpp
Src/Plugin/TransX/: BodyCache.h  CMakeLists.txt  TransXFunction.cpp  basefunction.cpp  globals.cpp  graph.cpp  intercept.cpp  mapfunction.cpp  mfdfunction.cpp  mfdvarhandler.cpp  mfdvariable.cpp  mfdvartypes.cpp  orbitelements.cpp  orbitelements.h  planfunction.cpp  shiplist.cpp  transx.cpp  transxstate.cpp  viewstate.cpp
Src/Vessel/Common/: Instrument.cpp
Src/Vessel/DeltaGlider/: AAPSubsys.cpp  AerodynSubsys.cpp  AerodynSubsys.h  CMakeLists.txt  DGLua.cpp  DGSubsys.h  DGSwitches.h  DeltaGlider.cpp  DeltaGlider.h  DockingSubsys.cpp  DockingSubsys.h  FailureSubsys.h  FuelMfd.h  GearSubsys.cpp  Horizon.h  HoverSubsys.cpp  HoverSubsys.h  InstrAoa.h  InstrHsi.h  InstrVs.h  LightSubsys.cpp  LightSubsys.h  MainRetroSubsys.cpp  MainRetroSubsys.h  MomentInd.h  PressureSubsys.cpp  PressureSubsys.h  RcsSubsys.h  ScramSubsys.h  ThermalSubsys.cpp  ThermalSubsys.h
Src/Vessel/Dragonfly/: CMakeLists.txt  Dragonfly.cpp  Dragonfly.h  Esystems.cpp  Esystems.h  Hsystems.cpp  Hsystems.h  Internal.cpp  Internal.h  Panel.h  Thermal.cpp  instruments.cpp  instruments.h  panel.cpp
Src/Vessel/HST/: CMakeLists.txt  HST.cpp  HST.h  HST_Lua.cpp
Src/Vessel/HST/Config/: HST.cfg
Src/Vessel/MMU/: CMakeLists.txt  mmu.cpp
Src/Vessel/Quadcopter/: CMakeLists.txt  Quadcopter.h  QuadcopterSubsys.h
Src/Vessel/ScriptVessel/: CMakeLists.txt  ScriptVessel.cpp
Src/Vessel/ShuttleA/: CMakeLists.txt  InstrVs.h  ShuttleA.cpp  ShuttleA.h  ShuttleALua.cpp  adiball.h  adictrl.h  auxpodctrl.h  hudbutton.h  mfdbutton.h  navbutton.h  needlepair.h  sliderpair.h  switches.h
Src/Vessel/ShuttlePB/: CMakeLists.txt  ShuttlePB.cpp
Src/Vessel/Solarsail/: CMakeLists.txt  SailLua.cpp  SolarSail.h
Tests/: CMakeLists.txt
Utils/: CMakeLists.txt
Utils/meshc/: CMakeLists.txt  Mesh.cpp  Mesh.h  meshc.cpp
Utils/texpack/: texpack.cpp
Utils/tileedit/qt/src/: CMakeLists.txt  ZTreeMgr.cpp  ZTreeMgr.h  cmap.h  colorbar.cpp  ddsread.cpp  ddsread.h  dlgelevexport.cpp  elevtile.cpp  elv_io.cpp  imagetools.h  main.cpp  tile.cpp  tile.h  tileblock.cpp  tilecanvas.cpp  tilecanvas.h  tileedit.cpp  tileedit.h
cmake/: FindDXVK.cmake
(+71 files in other folders)
