# Copyright (c) Martin Schweiger
# Licensed under the MIT License

# Static library containing the DLL entry point for Orbiter plugins.
# To be included by all Orbiter plugin DLLs.

add_library(Orbitersdk STATIC
	Orbitersdk.cpp
)

# Position-independent code
if(UNIX)
    target_compile_options(Orbitersdk PUBLIC -fpic)
endif()

target_include_directories(Orbitersdk SYSTEM PUBLIC
    ${ORBITER_SOURCE_SDK_INCLUDE_DIR}
    ${WIN32_INCLUDE_DIR}
)

set_target_properties(Orbitersdk
	PROPERTIES
	FOLDER Core
)

# Copy library to its Orbitersdk/lib location so that external project integrated into the build can find it
add_custom_command(TARGET Orbitersdk
	POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E make_directory ${ORBITER_BINARY_SDK_DIR}/lib
	COMMAND ${CMAKE_COMMAND} -E copy ${ORBITER_SDK_LIB} ${ORBITER_BINARY_SDK_DIR}/lib/ 
)

# Installation: Orbiter addon entry interface library to SDK folder to be included by addons
install(TARGETS Orbitersdk
	ARCHIVE
	DESTINATION ${ORBITER_INSTALL_SDK_DIR}/lib
)
